--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
             <div class="slider-wrapper" tabindex="0">
 
                 <div class="item">
-                    <img v-for="(slide,index) in slides" :src="slides[index].image" alt="Svezia"/>
+                    <img :src="slides[currentIndex].image" alt="Svezia"/>
                     <div class="text"  v-for="(slide,index) in slides" >
-                        <h3>{{slides[index].title}}</h3>
+                        <h3>{{slides[currentIndex].title}}</h3>
                         <p>
-                            {{slides[index].text}}
+                            {{slides[currentIndex].text}}
                         </p>
                     </div>
                 </div>
 
                 <div class="thumbs">
-                    <div class="prev"  @click="message"></div>
-                    <div class="next"></div>
+                    <div class="prev" @click="Previous(currentIndex--)" ></div>
+                    <div class="next" @click="Next(currentIndex++)"></div>
                     <div class="thumb active">
                         <img src="img/01.jpg" alt="Svezia"/>
                     </div>
