--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="thumbs">
-                    <div class="prev" @click="Previous(currentIndex--)" ></div>
+                    <div class="prev" @click="Prev(currentIndex--)" ></div>
                     <div class="next" @click="Next(currentIndex++)"></div>
                     <div class="thumb active">
                         <img src="img/01.jpg" alt="Svezia"/>
