--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 </div>
 
                 <div class="thumbs">
-                    <div class="prev" @click="Prev(currentIndex--)" ></div>
-                    <div class="next" @click="Next(currentIndex++)"></div>
+                    <div class="prev" @click="Prev" ></div>
+                    <div class="next" @click="Next"></div>
                     <div class="thumb active">
                         <img src="img/01.jpg" alt="Svezia"/>
                     </div>
