--- a/index.html
+++ b/index.html
@@ -29,21 +29,10 @@
                 <div class="thumbs">
                     <div class="prev" @click="Prev" ></div>
                     <div class="next" @click="Next"></div>
-                    <div class="thumb active">
-                        <img src="img/01.jpg" alt="Svezia"/>
+                    <div class="thumb" v-for="(slide,currentIndex) in slides">
+                        <img :src="slides[currentIndex].image" alt="Svezia"/>
                     </div>
-                    <div class="thumb">
-                        <img src="img/02.jpg" alt="Svizzera" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/03.jpg" alt="Gran Bretagna" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/04.jpg" alt="Germania" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/05.jpg" alt="Paradise" />
-                    </div>
+
                 </div>
 
             </div>
