--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div id="app">
 
         <div class="container" >
-            <div class="slider-wrapper" tabindex="0">
+            <div class="slider-wrapper" tabindex="0"
+            @mouseover="stopAutoplay" @mouseleave="startAutoplay">
 
                 <div class="item">
                     <img :src="slides[currentIndex].image" alt="Svezia"/>
@@ -29,9 +30,25 @@
                 <div class="thumbs">
                     <div class="prev" @click="Prev" ></div>
                     <div class="next" @click="Next"></div>
-                    <div class="thumb" v-for="(slide,currentIndex) in slides">
-                        <img :src="slides[currentIndex].image" alt="Svezia"/>
+                    <div :class="(index==currentIndex) ? 'active' : '' " class="thumb" @click="changePictureToIndex(index)" v-for="(thumb,index) in slides">
+                        <img :src="thumb.image" alt="Svezia"/>
                     </div>
+
+                    <!-- <div class="thumb active">
+                        <img src="img/01.jpg" alt="Svezia"/>
+                    </div>
+                    <div class="thumb">
+                        <img src="img/02.jpg" alt="Svizzera" />
+                    </div>
+                    <div class="thumb">
+                        <img src="img/03.jpg" alt="Gran Bretagna" />
+                    </div>
+                    <div class="thumb">
+                        <img src="img/04.jpg" alt="Germania" />
+                    </div>
+                    <div class="thumb">
+                        <img src="img/05.jpg" alt="Paradise" />
+                    </div> -->
 
                 </div>
 
